create calculator with divide add substract and multiply functions

--- a/index.html
+++ b/index.html
@@ -20,13 +20,12 @@
          <label for="add2">2nd number:</label>
          <input id="add2" class="form-control" type="text">
        </div>
-       <button id="btn-add" class="btn">Add</button>
-       <button type="submit" class="btn">Substract</button>
-       <button type="submit" class="btn">Multiply</button>
-       <button type="submit" class="btn">Divide</button>
+       <button id="button1" type="submit" class="btn">Add</button>
+       <button id="button2" type="submit" class="btn">Substract</button>
+       <button id="button3" type="submit" class="btn">Multiply</button>
+       <button id="button4" type="submit" class="btn">Divide</button>
      </form>
      <div id="output">
-    </div>
    </div>
   </body>
 </html>
